Added my Framework.cpp to visualize modules.

--- a/TripleX/TripleX/TripleX.vcxproj
+++ b/TripleX/TripleX/TripleX.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Storage\.vscode\TripleX\Framework.cpp" />
     <ClCompile Include="TripleX.cpp" />
   </ItemGroup>
   <ItemGroup>
