--- a/TripleX/TripleX/TripleX.vcxproj.filters
+++ b/TripleX/TripleX/TripleX.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="TripleX.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Storage\.vscode\TripleX\Framework.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="DesignDoc.txt">
